<?xml version="1.0"?>
<package format="3">
  <name>py_force_controller</name>
  <version>0.0.1</version>
  <description>Force PI controller</description>
  <maintainer email="example@example.com">koni</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>